--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "youtube-player",
   "version": "0.1.0",
-  "homepage": "https://cuniq.github.io/youtube-player/", 
+  "homepage": "https://cuniq.github.io/youtube-player", 
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
